tests/rosetta/out/Java/bulls-and-cows-player.java
// Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
// bulls-and-cows-player.mochi
import java.util.*;

public class BullsAndCowsPlayer {
    static int indexOf(String s, String ch) {
        int i = 0;
        while (i < s.length()) {
            if (Objects.equals(s.substring(i, i + 1), ch)) {
                return i;
            }
            i = (int)(i + 1);
        }
        return -1;
    }
    static List<String> fields(String s) {
        List<String> words = Arrays.asList();
        String cur = "";
        int i = 0;
        while (i < s.length()) {
            String ch = s.substring(i, i + 1);
            if (Objects.equals(ch, " ") || Objects.equals(ch, "\t") || Objects.equals(ch, "\n")) {
                if (cur.length() > 0) {
                    words.add(cur);
                    cur = "";
                }
            }
            else {
                cur = cur + ch;
            }
            i = (int)(i + 1);
        }
        if (cur.length() > 0) {
            words.add(cur);
        }
        return words;
    }
    static List<String> makePatterns() {
        List<String> digits = new ArrayList<>(Arrays.asList("1", "2", "3", "4", "5", "6", "7", "8", "9"));
        List<String> pats = Arrays.asList();
        int i = 0;
        while (i < digits.size()) {
            int j = 0;
            while (j < digits.size()) {
                if (j != i) {
                    int k = 0;
                    while (k < digits.size()) {
                        if (k != i && k != j) {
                            int l = 0;
                            while (l < digits.size()) {
                                if (l != i && l != j && l != k) {
                                    pats.add(((Number)((Number)((Number)digits.get(i)).doubleValue() + ((Number)digits.get(j)).doubleValue()).doubleValue() + ((Number)digits.get(k)).doubleValue()).doubleValue() + ((Number)digits.get(l)).doubleValue());
                                }
                                l = (int)(l + 1);
                            }
                        }
                        k = (int)(k + 1);
                    }
                }
                j = (int)(j + 1);
            }
            i = (int)(i + 1);
        }
        return pats;
    }
    static void main() {
        System.out.println("Cows and bulls/player\n" + "You think of four digit number of unique digits in the range 1 to 9.\n" + "I guess.  You score my guess:\n" + "    A correct digit but not in the correct place is a cow.\n" + "    A correct digit in the correct place is a bull.\n" + "You give my score as two numbers separated with a space.");
        List<String> patterns = makePatterns();
        while (true) {
            if (Objects.equals(patterns.size(), 0)) {
                System.out.println("Oops, check scoring.");
                return ;
            }
            List<String> guess = patterns.get(0);
            patterns = ((List)patterns).subList(1, patterns.size());
            int cows = 0;
            int bulls = 0;
            while (true) {
                System.out.println("My guess: " + guess + ".  Score? (c b) ");
                String line = scanner.nextLine();
                List<String> toks = fields(line);
                if (Objects.equals(toks.size(), 2)) {
                    Object c = int(toks.get(0));
                    Object b = int(toks.get(1));
                    if (c >= 0 && c <= 4 && b >= 0 && b <= 4 && c + b <= 4) {
                        cows = (int)(c);
                        bulls = (int)(b);
                        break;
                    }
                }
                System.out.println("Score guess as two numbers: cows bulls");
            }
            if (bulls == 4) {
                System.out.println("I did it. :)");
                return ;
            }
            List<String> next = Arrays.asList();
            int idx = 0;
            while (idx < patterns.size()) {
                List<String> pat = patterns.get(idx);
                int c = 0;
                int b = 0;
                int i = 0;
                while (i < 4) {
                    String cg = guess.substring(i, i + 1);
                    String cp = pat.substring(i, i + 1);
                    if (Objects.equals(cg, cp)) {
                        b = (int)(b + 1);
                    }
                    i = (int)(i + 1);
                }
                if (c == cows && b == bulls) {
                    next.add(pat);
                }
                idx = (int)(idx + 1);
            }
            patterns = next;
        }
    }
    public static void main(String[] args) {
        main();
    }
}
